MDEV-23278 Incorrect Calculation while using Avg Function

The decimal_precision virtual override for Item_func_case is
necessary to accurately compute precision of values populated
into decimal fields.  This method was removed apparently during
a refactor of the Item_func_case family of classes between 10.2
and 10.5.